fixed tile spacing, added box shadow on hover

--- a/new-sewing-site/madebymelissac.css
+++ b/new-sewing-site/madebymelissac.css
@@ -17,7 +17,7 @@ body {
 	display: flex;
     justify-content: center;
     align-items: flex-start;
-    padding-top: 25vh;
+    padding-top: 15vh;
 }
 
 h1 {
@@ -31,11 +31,16 @@ h1 {
         }
 
 .home-tile {
-	height: 60px;
+	height: 70px;
 	font-family: 'Varuna', sans-serif;
-	font-size: 1.5em;
+	font-size: 2vw;
 	text-align: center;
 	text-transform: uppercase;
 	background-color: #2d2172;
 	opacity: 0.8;
+	margin: 5px;
+}
+
+.home-tile:hover {
+	box-shadow: 5px 5px 5px #baadce;
 }
